2003-11-29  Roland Mas  <99.roland.mas@aist.enst.fr>

	* deb-specific/db-upgrade.pl: Upgrade database schema using
	20031105.sql and 20031124.sql.

	* www/admin/approve-pending.php: Patch #606 from Guillaume Smet
	fixing a localisation key.

	* www/project/admin/database.php: Added missing " (patch #595 from
	Soon Son Kwon <kss@kldp.org>.

	* www/include/languages/French.tab: Patch #611, again from
	Guillaume Smet.

2003-11-26  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: Patch #609 from Guillaume
	Smet.

2003-11-25  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/Spanish.tab: Patch #607 from Francisco
	Gimeno fixing various strings.

	* www/include/languages/French.tab: Patch #605 from Guillaume Smet
	<guillaume_ml@smet.org> fixing various strings.

2003-11-25  Christian Bayle <bayle@debian.org>

	* Added setup README.setup to generate etc/local.inc and etc/httpd.conf
	from etc/gforge.conf and etc/local.d/* etc/httpd.d/* template files
	Also added utils/install-apache.sh and utils/fill-in-the-blank.pl
	* Copied www/themes/osx/images/ic/msg.png from gforge theme (Closes
	bug #580)
	* Deleting trove category generate "Error In Trove Operation"
	correction thanks to Jim Walters and Andreas Schrattenecker (Closes
	bug #572 )

2003-11-24  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: Patch #604 from Guillaume Smet
	<guillaume_ml@smet.org> fixing various strings.  Thanks!

2003-11-20 Tom Copeland  <tom@infoether.com>

	* www/project/admin/index.php
	Removed some empty space btwn the "Add Member" and "File Releases"
	sections.

2003-11-17 Tom Copeland  <tom@infoether.com>

	* www/account/register.php, login.php, pending-resend.php,
	www/include/languages/Base.tab
	Implemented RFE #590 Add link for "resend pending confirmation hash"
	* www/my/index.php
	Implemented RFE #589 "My personal page" assigned items titles could
	be linked instead of the row ids
